// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-dlfnbm eMghch"
>
  <div
    className="sc-eCssSg dmOjzj"
  >
    <span
      className="sc-jSgupP"
    >
      0
    </span>
    <span
      className="sc-gKsewC iEXlGO"
    >
      42
    </span>
  </div>
  <button
    className="sc-bdfBwQ sc-gsTCUz iEhruk gWqNOS"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-dlfnbm eMghch"
>
  <div
    className="sc-hKgILt RRwRW"
  >
    🛌🛌
  </div>
  <button
    className="sc-bdfBwQ sc-gsTCUz egYkqn gWqNOS"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-dlfnbm eMghch"
>
  <div
    className="sc-hKgILt RRwRW"
  >
    🍅
  </div>
  <button
    className="sc-bdfBwQ sc-gsTCUz egYkqn gWqNOS"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-dlfnbm eMghch"
>
  <div
    className="sc-hKgILt RRwRW"
  >
    🛌
  </div>
  <button
    className="sc-bdfBwQ sc-gsTCUz egYkqn gWqNOS"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
